test/zstarPow3_2.slq

def main(){
	x:=1:!â„¤star[14];
	b:=3 coerce !â„¤star[14];
	t:=H(0);
	if t{ b=5 coerce !â„¤star[14]; } /// TODO
	yâ‚€:=[H(0) for i in 0..3] as int[_];
	yâ‚پ:=[H(0) for i in 0..3] as uint[_];
	xآ·=b^yâ‚€; /// error
	xآ·=b^yâ‚پ; /// error
	return (x,yâ‚€,yâ‚پ,t);
}
